--- a/.github/workflows/overpurple.yml
+++ b/.github/workflows/overpurple.yml
@@ -19,5 +19,5 @@ jobs:
       with:
         access-token: ${{ secrets.OVERPURPLE }}
         deploy-branch: gh-pages
-        gatsby-args: --prefix-paths
+        gatsby-args: prefix-paths
         
