--- a/.github/workflows/overpurple.yml
+++ b/.github/workflows/overpurple.yml
@@ -14,10 +14,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v1
     - uses: enriikke/gatsby-gh-pages-action@v2
       with:
         access-token: ${{ secrets.OVERPURPLE }}
         deploy-branch: gh-pages
-        gatsby-args: prefix-paths
+        gatsby-args: --prefix-paths
+
+
+        
         
