--- a/.github/workflows/overpurple.yml
+++ b/.github/workflows/overpurple.yml
@@ -14,8 +14,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - uses: enriikke/gatsby-gh-pages-action@v2
+    - uses: actions/checkout@v3
+    - name: Gatsby Publish Node16
+      uses: Xstoudi/gatsby-gh-pages-action@v3.0.0
+    # - uses: enriikke/gatsby-gh-pages-action@v2
       with:
         access-token: ${{ secrets.OVERPURPLE }}
         deploy-branch: gh-pages
