--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "terser": "^5.16.6",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
