--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "terser": "^5.16.6",
-    "use-dark-mode": "^2.3.1"
+    "terser": "4.6.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.54.1",
