--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "gatsby": "^5.7.0",
     "gatsby-plugin-feed": "^5.7.0",
     "gatsby-plugin-image": "^3.7.0",
@@ -61,7 +62,7 @@
     "prepare": "husky install",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "dev": "gatsby develop",
-    "develop": "yarn prepare && gatsby develop",
+    "develop": "yarn prepare && check-type && gatsby develop",
     "start": "yarn dev",
     "build": "tsc && rm -rf public && rm -rf .cache && gatsby build",
     "serve": "gatsby serve",
