--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lovexueorangecat/overpurple.io.git"
+    "url": "git+https://github.com/guho-lovex/overpurple.io"
   },
   "engines": {
     "node": ">=18"
@@ -47,6 +47,7 @@
     "gatsby-plugin-sharp": "^5.7.0",
     "gatsby-remark-images": "^7.7.0",
     "gatsby-remark-prismjs": "^7.7.0",
+    "gatsby-remark-prismjs-copy-button": "^0.4.0",
     "gatsby-remark-responsive-iframe": "^6.7.0",
     "gatsby-source-filesystem": "^5.7.0",
     "gatsby-transformer-remark": "^6.7.0",
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "autoprefixer": "^10.4.14",
