--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gatsby-plugin-image": "^3.7.0",
     "gatsby-plugin-manifest": "^5.7.0",
     "gatsby-plugin-sharp": "^5.7.0",
+    "gatsby-remark-autolink-headers": "^6.13.0",
     "gatsby-remark-images": "^7.7.0",
     "gatsby-remark-prismjs": "^7.7.0",
     "gatsby-remark-prismjs-copy-button": "^0.4.0",
