--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   "dependencies": {
     "@fontsource/merriweather": "^4.5.14",
     "@fontsource/montserrat": "^4.5.14",
-    "@types/react-helmet": "^6.1.11",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-prettier": "^4.2.1",
@@ -46,7 +45,7 @@
     "gatsby-plugin-image": "^3.7.0",
     "gatsby-plugin-manifest": "^5.7.0",
     "gatsby-plugin-offline": "^6.13.0",
-    "gatsby-plugin-react-helmet": "^6.13.0",
+    "gatsby-plugin-react-helmet-async": "^1.2.3",
     "gatsby-plugin-sharp": "^5.7.0",
     "gatsby-remark-autolink-headers": "^6.13.0",
     "gatsby-remark-images": "^7.7.0",
@@ -60,7 +59,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "terser": "4.6.11"
   },
   "devDependencies": {
