--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "author": "lovex <l2276227464@163.com>",
   "bugs": {
-    "url": "https://github.com/lovexueorangecat/overpurple.io/issues"
+    "url": "https://github.com/guho-lovex/overpurple.io/issues"
   },
   "dependencies": {
     "@fontsource/merriweather": "^4.5.14",
@@ -77,10 +77,11 @@
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5"
   },
-  "homepage": "https://github.com/lovexueorangecat/overpurple.io#readme",
+  "homepage": "https://github.com/guho-lovex/overpurple.io#readme",
   "keywords": [
     "react",
-    "overpurple"
+    "overpurple",
+    "overpurlple.io"
   ],
   "license": "0BSD"
 }
