--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gatsby-plugin-offline": "^6.13.0",
     "gatsby-plugin-react-helmet-async": "^1.2.3",
     "gatsby-plugin-sharp": "^5.7.0",
+    "gatsby-plugin-sitemap": "^6.13.0",
     "gatsby-remark-autolink-headers": "^6.13.0",
     "gatsby-remark-images": "^7.7.0",
     "gatsby-remark-prismjs": "^7.7.0",
