--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   "homepage": "https://github.com/guho-lovex/overpurple.io#readme",
   "keywords": [
     "react",
+    "blog",
     "overpurple",
     "overpurlple.io",
     "guho",
